--- a/app/src/main/res/layout/quest_result.xml
+++ b/app/src/main/res/layout/quest_result.xml
@@ -16,7 +16,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/image_quester_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -29,7 +29,7 @@
             app:srcCompat="@android:drawable/checkbox_on_background" />
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/image_questee_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -37,7 +37,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/text_quest_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30sp"
@@ -51,45 +51,22 @@
         android:textSize="15sp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/text_quest_result_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30sp"
         android:text="아메리카노~"
         android:textSize="20sp" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="강ㅇㅇ님의 사례금"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text=" 1000원이"
-            android:textSize="20sp" />
-    </LinearLayout>
-
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/text_quest_result_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20sp"
-        android:text="정ㅇㅇ님에게 송금되었습니다."
+        android:text="강ㅇㅇ님의 사례금 1000원이"
         android:textSize="20sp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_result_ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="확인" />
