--- a/app/src/main/res/layout/quest_add.xml
+++ b/app/src/main/res/layout/quest_add.xml
@@ -81,109 +81,107 @@
 
             </FrameLayout>
 
-            <LinearLayout
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:orientation="vertical">
 
-                <FrameLayout
-                    android:layout_width="wrap_content"
+                <android.support.constraint.ConstraintLayout
+                    android:id="@+id/constraint1"
+                    android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/text_add_title_header"
-
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="22dp"
-                        android:fontFamily="@font/work"
-                        android:text="제목"
-                        android:textSize="10dp" />
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toTopOf="@+id/constraint2"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <EditText
                         android:id="@+id/textbox_add_title"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginTop="6dp"
-                        android:background="@drawable/round_gray"
-
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#00000000"
                         android:ems="10"
                         android:fontFamily="@font/work"
                         android:hint="의뢰 제목"
-
                         android:inputType="textPersonName"
-                        android:paddingLeft="20dp" />
-                </FrameLayout>
+                        app:layout_constraintBottom_toTopOf="@+id/imageView8"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/imageView8" />
 
-                <FrameLayout
+                    <ImageView
+                        android:id="@+id/imageView8"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:background="@drawable/gray_underbar"
+                        android:textSize="10dp"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+                </android.support.constraint.ConstraintLayout>
+
+                <android.support.constraint.ConstraintLayout
+                    android:id="@+id/constraint2"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/text_add_area_header"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="22dp"
-                        android:fontFamily="@font/work"
-                        android:text="위치"
-
-                        android:textSize="10dp" />
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toTopOf="@+id/constraint3">
 
                     <EditText
                         android:id="@+id/text_point"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginTop="6dp"
                         android:layout_weight="1"
-                        android:background="@drawable/round_gray"
+                        android:background="#00000000"
                         android:ems="10"
                         android:fontFamily="@font/work"
                         android:hint="의뢰 요청 희망 위치"
-
                         android:inputType="text"
-                        android:paddingLeft="20dp" />
-                </FrameLayout>
+                        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/imageView3" />
 
-                <FrameLayout
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="match_parent"
+                        android:layout_height="20dp"
+                        android:background="@drawable/gray_underbar"
+                        android:textSize="10dp"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+                </android.support.constraint.ConstraintLayout>
+
+                <android.support.constraint.ConstraintLayout
+                    android:id="@+id/constraint3"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/text_add_reward_header"
-
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="22dp"
-                        android:fontFamily="@font/work"
-                        android:text="사례금"
-                        android:textSize="10dp" />
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent">
 
                     <EditText
                         android:id="@+id/textbox_add_reward"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginTop="6dp"
-                        android:background="@drawable/round_gray"
+                        android:background="#00000000"
                         android:ems="10"
                         android:fontFamily="@font/work"
                         android:hint="사례금 입력"
                         android:inputType="numberSigned"
-                        android:paddingLeft="20dp" />
+                        app:layout_constraintBottom_toTopOf="@+id/imageView2"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent" />
 
-                </FrameLayout>
+                    <ImageView
+                        android:id="@+id/imageView2"
+                        android:layout_width="match_parent"
+                        android:layout_height="22dp"
+                        android:background="@drawable/gray_underbar"
+                        android:textSize="10dp"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+
+                </android.support.constraint.ConstraintLayout>
 
 
-            </LinearLayout>
+            </android.support.constraint.ConstraintLayout>
 
 
         </LinearLayout>
@@ -206,10 +204,10 @@
                 android:text="의뢰 내용" />
 
             <EditText
-                android:background="@drawable/round_gray"
+                android:background="@drawable/rac_gray_round"
                 android:id="@+id/textbox_add_comment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:ems="10"
                 android:gravity="top"
